--- a/about.html
+++ b/about.html
@@ -146,22 +146,24 @@
                 <hr>
                 <img src="img/about/som.png" alt="" class="mw-100 py-4">
                 <div class="block_text text_font text_black">
-                    Архитектором комплекса Talan Towers выступила американская компания SOM
-                    (Skidmore, Owings Merrill LLP) – одна из крупнейших компаний в сфере архитектуры,
-                    дизайна интерьеров, инжиниринга и городского планирования в мире.
-                    С момента основания в 1936 году, компания реализовала более 10.000 проектов
-                    в 50 странах мира.  Высотное строительство — одна из главных специализаций фирмы SOM.
-                    Так, авторству компании принадлежат такие всемирно известные небоскребы,
-                    как Burj Khalifa (Дубай, ОАЭ), John Hancock Center (Чикаго, США),
-                    а также World Trade Center (Манхэттен, Нью-Йорк, США). Talan Towers – первый проект SOM,
-                    реализованный в Астане.
-                    <br>
-                    <br>
-                    На сегодняшний день SOM — единственная компания, которая дважды была награждена премией
-                    Architecture Firm Award от Американского Института Архитектуры.
-                    Также деятельность фирмы была отмечена наградой Pritzker Prize, считающейся
-                    эквивалентом Нобелевской премии в области архитектуры. Всего на
-                    счету SOM более 2000 профессиональных наград.
+                    <p>
+                        Архитектором комплекса Talan Towers выступила американская компания SOM
+                        (Skidmore, Owings Merrill LLP) – одна из крупнейших компаний в сфере архитектуры,
+                        дизайна интерьеров, инжиниринга и городского планирования в мире.
+                        С момента основания в 1936 году, компания реализовала более 10.000 проектов
+                        в 50 странах мира.  Высотное строительство — одна из главных специализаций фирмы SOM.
+                        Так, авторству компании принадлежат такие всемирно известные небоскребы,
+                        как Burj Khalifa (Дубай, ОАЭ), John Hancock Center (Чикаго, США),
+                        а также World Trade Center (Манхэттен, Нью-Йорк, США). Talan Towers – первый проект SOM,
+                        реализованный в Астане.
+                    </p>
+                    <p>
+                        На сегодняшний день SOM — единственная компания, которая дважды была награждена премией
+                        Architecture Firm Award от Американского Института Архитектуры.
+                        Также деятельность фирмы была отмечена наградой Pritzker Prize, считающейся
+                        эквивалентом Нобелевской премии в области архитектуры. Всего на
+                        счету SOM более 2000 профессиональных наград.
+                    </p>
                 </div>
             </div>
         </div>
@@ -175,23 +177,25 @@
                     <div class="title_font text_gold" style="font-size: 1.1em">дизайн интерьеров отеля от английских архитекторов</div>
                     <hr>
                     <img src="img/about/richmond.png" alt="" class="mw-100 py-4">
-                    <div class="my-4 block_text text_font">
-                        Разработкой интерьера отеля занималась компания Richmond International,
-                        которая существует с 1966 года и обладает устойчивым реноме на рынке
-                        проектирования фешенебельных резиденций, эксклюзивных отелей и ресторанов.
-                        На протяжении всего своего существования компания не раз создавала проекты
-                        для отелей сети The Ritz-Carlton в самых разных уголках планеты, а в Астане
-                        старалась отразить в дизайне местный колорит.
-                        <br>
-                        <br>
-                        Так, например, деревянные резные вставки, украшающие Лобби-лаундж Өzen,
-                        были вдохновлены ландшафтом Мангистауских гор. Лобби отеля преображают освещенныенастенные
-                        панели, которые напоминают об окаменевших хвойных лесах озера Каинды; тогда как
-                        полы на стойке регистрации, украшенные металлическим цветочным узором,олицетворяют
-                        лучи которые исходят от основания лестницы и скульптуры Джона Кравчика.
-                        Стоит отметить, что в оформлении интерьера использованы самые благородные
-                        породы мрамора и дерева, поэтому уже сейчас отель The Ritz-Carlton, Astana
-                        оценивается многими экспертами как архитектурный шедевр.
+                    <div class="block_text text_font">
+                        <p>
+                            Разработкой интерьера отеля занималась компания Richmond International,
+                            которая существует с 1966 года и обладает устойчивым реноме на рынке
+                            проектирования фешенебельных резиденций, эксклюзивных отелей и ресторанов.
+                            На протяжении всего своего существования компания не раз создавала проекты
+                            для отелей сети The Ritz-Carlton в самых разных уголках планеты, а в Астане
+                            старалась отразить в дизайне местный колорит.
+                        </p>
+                        <p>
+                            Так, например, деревянные резные вставки, украшающие Лобби-лаундж Өzen,
+                            были вдохновлены ландшафтом Мангистауских гор. Лобби отеля преображают освещенныенастенные
+                            панели, которые напоминают об окаменевших хвойных лесах озера Каинды; тогда как
+                            полы на стойке регистрации, украшенные металлическим цветочным узором,олицетворяют
+                            лучи которые исходят от основания лестницы и скульптуры Джона Кравчика.
+                            Стоит отметить, что в оформлении интерьера использованы самые благородные
+                            породы мрамора и дерева, поэтому уже сейчас отель The Ritz-Carlton, Astana
+                            оценивается многими экспертами как архитектурный шедевр.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -201,20 +205,22 @@
                     <hr>
                     <img src="img/about/pringle.png" alt="" class="mw-100 py-4">
                     <div class="block_text text_font">
-                        Pringle Brandon Perkins +Will – одно из самых успешных мировых архитектурных бюро
-                        в Великобритании и регионе EMEA (страны Европы, Ближнего Востока и Африки),
-                        специализирующихся на дизайне интерьеров рабочего пространства и коммерческой архитектуре.
-                        Специалисты бюро работали над офисными интерьерами для Microsoft, Google, Coca-Cola,
-                        Siemens, Unilever, Bank of China, а в 2016 году приложили руку и к одному из самых
-                        инновационных проектов в столице — Talan Towers Offices. В этом проекте они стремились
-                        сохранить много света и разработать пространство, в котором чувствуется свобода.
-                        Поэтому было решено использовать элементы высокой архитектуры: нужную высоту потолков,
-                        колонны внутри здания.
-                        <br>
-                        <br>
-                        При этом часть интерьера отделана теплыми материалами (натуральным камнем и высококачественным
-                        деревом), которые согревают пространство. По признанию экспертов выбранный дизайн настолько
-                        прост, универсален, удобен и хорош, что актуален сейчас и будет востребован через много лет.
+                        <p>
+                            Pringle Brandon Perkins +Will – одно из самых успешных мировых архитектурных бюро
+                            в Великобритании и регионе EMEA (страны Европы, Ближнего Востока и Африки),
+                            специализирующихся на дизайне интерьеров рабочего пространства и коммерческой архитектуре.
+                            Специалисты бюро работали над офисными интерьерами для Microsoft, Google, Coca-Cola,
+                            Siemens, Unilever, Bank of China, а в 2016 году приложили руку и к одному из самых
+                            инновационных проектов в столице — Talan Towers Offices. В этом проекте они стремились
+                            сохранить много света и разработать пространство, в котором чувствуется свобода.
+                            Поэтому было решено использовать элементы высокой архитектуры: нужную высоту потолков,
+                            колонны внутри здания.
+                        </p>
+                        <p>
+                            При этом часть интерьера отделана теплыми материалами (натуральным камнем и высококачественным
+                            деревом), которые согревают пространство. По признанию экспертов выбранный дизайн настолько
+                            прост, универсален, удобен и хорош, что актуален сейчас и будет востребован через много лет.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -295,18 +301,18 @@
     <div class="container">
         <div class="row">
             <div class="text-center w-100">
-                <a href="#">
+                <a href="https://www.facebook.com/talantowers/" target="_blank">
                     <img src="img/main/footer-facebook.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://ru.linkedin.com/showcase/talan-towers" target="_blank">
                     <img src="img/main/footer-linkedin.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://instagram.com/talantowers?utm_source=ig_profile_share&igshid=1i683dwvbnp2u" target="_blank">
                     <img src="img/main/footer-instagram.png" alt="">
                 </a>
             </div>
             <div class="text-center w-100 mt-4">
-                <a href="#" class="text_font text_gold">
+                <a href="contacts.html" class="text_font text_gold">
                     Контакты
                 </a>
             </div>
