--- a/emporium.html
+++ b/emporium.html
@@ -164,21 +164,23 @@
                     Starbucks Reserve Bar
                 </h1>
                 <div class="block_text text_font text-white">
-                    На территории галереи расположилась уникальная кофейня от бренда Starbucks.
-                    <br>
-                    <br>
-                    Это первое заведение в Казахстане с концепцией кофейного бара, где гостям
-                    демонстрируются альтернативные методы заваривания кофе (пуровер, сифон, кемекс
-                    и другие),  направленные на то, чтобы максимально раскрыть вкус зерна.
-                    Напитки здесь готовятся с помощью кофе-машины Clover и эспрессо-машины
-                    Black Eagle. Для приготовления напитков на Black Eagle используется единственная
-                    в своем роде смесь сортов зерен Reserve Microblend.
-                    <br>
-                    <br>
-                    Примечательно, что в дизайне интерьера Starbucks Reserve Bar отчетливо отражен
-                    казахский колорит, а посредством арт-объектов ручной работы — культура, история
-                    и регионы произрастания кофейных зерен. Это место создано для того, чтобы открывать
-                    для себя всю прелесть кофе линейки Reserve.
+                    <p>
+                        На территории галереи расположилась уникальная кофейня от бренда Starbucks.
+                    </p>
+                    <p>
+                        Это первое заведение в Казахстане с концепцией кофейного бара, где гостям
+                        демонстрируются альтернативные методы заваривания кофе (пуровер, сифон, кемекс
+                        и другие),  направленные на то, чтобы максимально раскрыть вкус зерна.
+                        Напитки здесь готовятся с помощью кофе-машины Clover и эспрессо-машины
+                        Black Eagle. Для приготовления напитков на Black Eagle используется единственная
+                        в своем роде смесь сортов зерен Reserve Microblend.
+                    </p>
+                    <p>
+                        Примечательно, что в дизайне интерьера Starbucks Reserve Bar отчетливо отражен
+                        казахский колорит, а посредством арт-объектов ручной работы — культура, история
+                        и регионы произрастания кофейных зерен. Это место создано для того, чтобы открывать
+                        для себя всю прелесть кофе линейки Reserve.
+                    </p>
                 </div>
             </div>
             <div class="col-md-6">
@@ -191,18 +193,18 @@
     <div class="container">
         <div class="row">
             <div class="text-center w-100">
-                <a href="#">
+                <a href="https://www.facebook.com/talantowers/" target="_blank">
                     <img src="img/main/footer-facebook.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://ru.linkedin.com/showcase/talan-towers" target="_blank">
                     <img src="img/main/footer-linkedin.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://instagram.com/talantowers?utm_source=ig_profile_share&igshid=1i683dwvbnp2u" target="_blank">
                     <img src="img/main/footer-instagram.png" alt="">
                 </a>
             </div>
             <div class="text-center w-100 mt-4">
-                <a href="#" class="text_font text_gold">
+                <a href="contacts.html" class="text_font text_gold">
                     Контакты
                 </a>
             </div>
