--- a/offices.html
+++ b/offices.html
@@ -179,10 +179,12 @@
                     ГОТОВЫЕ ОФИСЫ
                 </h1>
                 <div class="block_text text_font text-white">
-                    Высококачественные отделочные материалы и уникальный интерьерный дизайн готовых офисов ставит Talan Tower Offices на один уровень с топовыми бизнес-центрами мира.
-                    <br>
-                    <br>
-                    Кроме того, коэффициент потерь (соотношение используемой и арендуемой площадей) составляет всего 15%, что означает возможность размещения в максимально удобном офисном пространстве. С учетом установки фальшпола, навесного потолка или других дизайнерских решений, высота потолков в готовых офисах составляет более 3 метров, благодаря чему открывается доступ  к естественному свету для 90% площади помещения, что благоприятно сказывается не только на микроклимате,  но и общем самочувствии сотрудников.
+                    <p>
+                        Высококачественные отделочные материалы и уникальный интерьерный дизайн готовых офисов ставит Talan Tower Offices на один уровень с топовыми бизнес-центрами мира.
+                    </p>
+                    <p>
+                        Кроме того, коэффициент потерь (соотношение используемой и арендуемой площадей) составляет всего 15%, что означает возможность размещения в максимально удобном офисном пространстве. С учетом установки фальшпола, навесного потолка или других дизайнерских решений, высота потолков в готовых офисах составляет более 3 метров, благодаря чему открывается доступ  к естественному свету для 90% площади помещения, что благоприятно сказывается не только на микроклимате,  но и общем самочувствии сотрудников.
+                    </p>
                 </div>
                 <div class="block_actionBtn text_font">
                     <!--<a href="#" class="text-white">
@@ -200,10 +202,13 @@
                     ОФИСЫ ПОД ОТДЕЛКУ
                 </h1>
                 <div class="block_text text_font text_black">
-                    Также есть вариант сдачи офисов в черновой отделке по стандарту shell core, то есть с подготовленными стенами и точками подключений к инженерным коммуникациям. Все коммуникации бизнес-центра позволяют арендаторам свободно спланировать рабочее пространство с учетом специфики деятельности, предпочтений и особенностей компании.
-                    <br>
-                    <br>
-                    Здесь у всех арендаторов имеется возможность оборудовать офисы в формате open-space или сделать планировку с кабинетной системой.                </div>
+                    <p>
+                        Также есть вариант сдачи офисов в черновой отделке по стандарту shell core, то есть с подготовленными стенами и точками подключений к инженерным коммуникациям. Все коммуникации бизнес-центра позволяют арендаторам свободно спланировать рабочее пространство с учетом специфики деятельности, предпочтений и особенностей компании.
+                    </p>
+                    <p>
+                        Здесь у всех арендаторов имеется возможность оборудовать офисы в формате open-space или сделать планировку с кабинетной системой.
+                    </p>
+                </div>
                 <div class="block_actionBtn text_font">
                     <!--<a href="#" class="text_black">
                         План типового этажа
@@ -237,12 +242,14 @@
                     КАФЕ «RABBIT CANTEEN»
                 </h1>
                 <div class="block_text text_font text-white">
-                    Для сотрудников и гостей Talan Towers Offices созданы все необходимые условия для комфортного пребывания. Обеденный перерыв здесь можно устроить, не выходя
-                    из здания. На одном из этажей расположилось довольно оригинальное заведение «Rabbit Canteen».
-                    <br>
-                    <br>
-                    Помимо обширного меню, кафе приятно удивляет стильным интерьером. Так, например, стены заведения украшены картинами американского художника- аниматора Паскаля Кэмпиона, создавшего для Rabbit Canteen ряд иллюстраций,
-                    в которых отражены вечные человеческие ценности – дети, счастье и любовь.
+                    <p>
+                        Для сотрудников и гостей Talan Towers Offices созданы все необходимые условия для комфортного пребывания. Обеденный перерыв здесь можно устроить, не выходя
+                        из здания. На одном из этажей расположилось довольно оригинальное заведение «Rabbit Canteen».
+                    </p>
+                    <p>
+                        Помимо обширного меню, кафе приятно удивляет стильным интерьером. Так, например, стены заведения украшены картинами американского художника- аниматора Паскаля Кэмпиона, создавшего для Rabbit Canteen ряд иллюстраций,
+                        в которых отражены вечные человеческие ценности – дети, счастье и любовь.
+                    </p>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -346,18 +353,18 @@
     <div class="container">
         <div class="row">
             <div class="text-center w-100">
-                <a href="#">
+                <a href="https://www.facebook.com/talantowers/" target="_blank">
                     <img src="img/main/footer-facebook.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://ru.linkedin.com/showcase/talan-towers" target="_blank">
                     <img src="img/main/footer-linkedin.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://instagram.com/talantowers?utm_source=ig_profile_share&igshid=1i683dwvbnp2u" target="_blank">
                     <img src="img/main/footer-instagram.png" alt="">
                 </a>
             </div>
             <div class="text-center w-100 mt-4">
-                <a href="#" class="text_font text_gold">
+                <a href="contacts.html" class="text_font text_gold">
                     Контакты
                 </a>
             </div>
