--- a/rc.html
+++ b/rc.html
@@ -141,16 +141,18 @@
             </div>
             <div class="col-lg-4 block_content bg_gold align-self-center mml_lg">
                 <div class="block_text text_font text-white">
-                    На 14-м этаже отеля расположена эксклюзивная Клубная гостиная, где к услугам гостей,
-                    остановившимся в клубных номерах и номерах люкс, предлагаются дополнительные привилегии
-                    и услуги. Проживая в номерах категории The Ritz-Carlton Suite, гости имеют уникальную
-                    возможность воспользоваться услугами личного
-                    консьержа.
-                    <br>
-                    <br>
-                    The Ritz-Carlton – это особая идеология, ценности, философия и культура.
-                    Знаменитый посыл бренда Let Us Stay With You – это обращение к гостям
-                    и желание стать для них не просто отелем, а воспоминанием длиною в жизнь.
+                    <p>
+                        На 14-м этаже отеля расположена эксклюзивная Клубная гостиная, где к услугам гостей,
+                        остановившимся в клубных номерах и номерах люкс, предлагаются дополнительные привилегии
+                        и услуги. Проживая в номерах категории The Ritz-Carlton Suite, гости имеют уникальную
+                        возможность воспользоваться услугами личного
+                        консьержа.
+                    </p>
+                    <p>
+                        The Ritz-Carlton – это особая идеология, ценности, философия и культура.
+                        Знаменитый посыл бренда Let Us Stay With You – это обращение к гостям
+                        и желание стать для них не просто отелем, а воспоминанием длиною в жизнь.
+                    </p>
                 </div>
             </div>
         </div>
@@ -206,30 +208,34 @@
                 <div class="ritz_caption">
                     <h1 class="title_font text_gold">мероприятия</h1>
                     <div class="text_font text-white block_text">
-                        Расположенный в деловом центре столицы The Ritz-Carlton, Astana,
-                        идеальное место для проведения бизнес-мероприятий и различных торжеств.
-                        Оборудованные по последнему слову техники конференц-залы и переговорные
-                        комнаты отеля, обеспечат участникам любого мероприятия высокий уровень
-                        продуктивности. Встречи, заседания, презентации нового продукта,
-                        корпоративные мероприятия или большие конференции превратятся
-                        в незабываемые события в отеле
-                        <br>
-                        <br>
-                        The Ritz-Carlton, Astana.
+                        <p>
+                            Расположенный в деловом центре столицы The Ritz-Carlton, Astana,
+                            идеальное место для проведения бизнес-мероприятий и различных торжеств.
+                            Оборудованные по последнему слову техники конференц-залы и переговорные
+                            комнаты отеля, обеспечат участникам любого мероприятия высокий уровень
+                            продуктивности. Встречи, заседания, презентации нового продукта,
+                            корпоративные мероприятия или большие конференции превратятся
+                            в незабываемые события в отеле
+                        </p>
+                        <p>
+                            The Ritz-Carlton, Astana.
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mt-5">
                 <div class="text_font text_black">
-                    Конференц-этаж площадью свыше 1400 м² включает:<br>
-                    Бальный Зал размером 1000 м², который можно разделить на 4 отдельных секции,<br>
-                    Большую зону приема гостей,<br>
-                    Три переговорных комнат и конференц-залы.
-                    <br>
-                    <br>
-                    Команда профессионалов, включающую банкетную службу, опытных специалистов по
-                    организации мероприятий, сделают Ваше событие
-                    в The Ritz-Carlton, Astana идеальным.
+                    <p>
+                        Конференц-этаж площадью свыше 1400 м² включает:<br>
+                        Бальный Зал размером 1000 м², который можно разделить на 4 отдельных секции,<br>
+                        Большую зону приема гостей,<br>
+                        Три переговорных комнат и конференц-залы.
+                    </p>
+                    <p>
+                        Команда профессионалов, включающую банкетную службу, опытных специалистов по
+                        организации мероприятий, сделают Ваше событие
+                        в The Ritz-Carlton, Astana идеальным.
+                    </p>
                 </div>
             </div>
         </div>
@@ -244,18 +250,18 @@
     <div class="container">
         <div class="row">
             <div class="text-center w-100">
-                <a href="#">
+                <a href="https://www.facebook.com/talantowers/" target="_blank">
                     <img src="img/main/footer-facebook.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://ru.linkedin.com/showcase/talan-towers" target="_blank">
                     <img src="img/main/footer-linkedin.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://instagram.com/talantowers?utm_source=ig_profile_share&igshid=1i683dwvbnp2u" target="_blank">
                     <img src="img/main/footer-instagram.png" alt="">
                 </a>
             </div>
             <div class="text-center w-100 mt-4">
-                <a href="#" class="text_font text_gold">
+                <a href="contacts.html" class="text_font text_gold">
                     Контакты
                 </a>
             </div>
