--- a/rc_copy.html
+++ b/rc_copy.html
@@ -141,25 +141,27 @@
                     Mökki
                 </div>
                 <div class="block_text text_font text-white">
-                    The Ritz-Carlton, Astana, 3 этаж
-                    <br>
-                    <br>
-                    Mökki — основной ресторан отеля The Ritz-Carlton, Astana, который предлагает
-                    гостям превосходную кухню и широкую барную карту. В будние дни особой
-                    популярностью здесь пользуются бизнес-ланчи. А каждое первое
-                    и третье воскресенье месяца в элегантной атмосфере Mökki гости
-                    наслаждаются тематическими бранчами с широким выбором угощений,
-                    на котором гости могут насладиться замечательными закусками, изысканными салатами,
-                    незабываемыми десертами и авторскими блюдами от повара ресторана.
-                    Однако главной особенностью заведения являются авторские гастро-сеты
-                    от шеф-повара отеля Франка Коппелькамма, который реализуются в формате Chef’s Table.
-                    В таких случаях гостейприглашают за стойку
-                    открытой кухни, где Франк раскрывает секреты рецептов своих фирменных блюд.
-                    <br>
-                    <br>
-                    Контакты: +7 (7172) 734 000<br>
-                    www.ritzcarlton.com/en/hotels/kazakhstan/astana/dining/mokki<br>
-                    Instagram: @mokkirestaurant
+                    <p>
+                        The Ritz-Carlton, Astana, 3 этаж
+                    </p>
+                    <p>
+                        Mökki — основной ресторан отеля The Ritz-Carlton, Astana, который предлагает
+                        гостям превосходную кухню и широкую барную карту. В будние дни особой
+                        популярностью здесь пользуются бизнес-ланчи. А каждое первое
+                        и третье воскресенье месяца в элегантной атмосфере Mökki гости
+                        наслаждаются тематическими бранчами с широким выбором угощений,
+                        на котором гости могут насладиться замечательными закусками, изысканными салатами,
+                        незабываемыми десертами и авторскими блюдами от повара ресторана.
+                        Однако главной особенностью заведения являются авторские гастро-сеты
+                        от шеф-повара отеля Франка Коппелькамма, который реализуются в формате Chef’s Table.
+                        В таких случаях гостейприглашают за стойку
+                        открытой кухни, где Франк раскрывает секреты рецептов своих фирменных блюд.
+                    </p>
+                    <p>
+                        Контакты: +7 (7172) 734 000<br>
+                        www.ritzcarlton.com/en/hotels/kazakhstan/astana/dining/mokki<br>
+                        Instagram: @mokkirestaurant
+                    </p>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -177,20 +179,22 @@
                     Өzen
                 </div>
                 <div class="block_text text_font text-white">
-                    The Ritz-Carlton, Astana, 1 этаж
-                    <br>
-                    <br>
-                    Лобби–лаундж Өzen, расположенный на первом этаже отеля The Ritz-Carlton,
-                    Astana, привлекает посетителей, прежде всего, царящей в заведении непринужденной
-                    обстановкой, идеальной как для дружеского общения, так и для деловых встреч.
-                    Кроме того, столичные гурманы высоко оценят палитру коктейлей, удовлетворяющих
-                    самым изысканным требованиям. Их создание здесь возведено не просто в
-                    искусство – это настоящая алхимия, на стыке приготовления напитков и парфюмерии.
-                    <br>
-                    <br>
-                    Контакты: +7 (7172) 734 000<br>
-                    www.ritzcarlton.com/en/hotels/kazakhstan/astana/dining/ozen<br>
-                    Instagram: @ozenlobbylounge
+                    <p>
+                        The Ritz-Carlton, Astana, 1 этаж
+                    </p>
+                    <p>
+                        Лобби–лаундж Өzen, расположенный на первом этаже отеля The Ritz-Carlton,
+                        Astana, привлекает посетителей, прежде всего, царящей в заведении непринужденной
+                        обстановкой, идеальной как для дружеского общения, так и для деловых встреч.
+                        Кроме того, столичные гурманы высоко оценят палитру коктейлей, удовлетворяющих
+                        самым изысканным требованиям. Их создание здесь возведено не просто в
+                        искусство – это настоящая алхимия, на стыке приготовления напитков и парфюмерии.
+                    </p>
+                    <p>
+                        Контакты: +7 (7172) 734 000<br>
+                        www.ritzcarlton.com/en/hotels/kazakhstan/astana/dining/ozen<br>
+                        Instagram: @ozenlobbylounge
+                    </p>
                 </div>
             </div>
             <div class="col-lg-6 order-lg-first">
@@ -207,18 +211,20 @@
                     Selfie Astana
                 </div>
                 <div class="block_text text_font text_black">
-                    The Ritz-Carlton, Astana, 18 этаж
-                    <br>
-                    <br>
-                    Ресторан “Selfie Astana” расположен на 18-м этаже отеля The Ritz-Carlton, Astana,
-                    откуда открывается прекрасная панорама всей столицы. Являясь филиалом московского Selfie,
-                    признанного одним из 100 лучших ресторанов мира согласно рейтингу The World Best Restaurants,
-                    “Selfie Astana” также является рестораном класса fine dining. Кухней управляет известный
-                    московский бренд-шеф Анатолий Казаков, который представляет новый авторский взгляд на
-                    европейскую гастрономию и традиционную казахскую кухню. Позиции с локальным колоритом в
-                    его прочтении создаются по канонам высокой кухни: бешбармак здесь подают с тончайшими
-                    полосками яичной лапши, соусом на основе конского бульона и масла из джусая, а баурсаки
-                    запекают и наполняют гуакамоле из авокадо.
+                    <p>
+                        The Ritz-Carlton, Astana, 18 этаж
+                    </p>
+                    <p>
+                        Ресторан “Selfie Astana” расположен на 18-м этаже отеля The Ritz-Carlton, Astana,
+                        откуда открывается прекрасная панорама всей столицы. Являясь филиалом московского Selfie,
+                        признанного одним из 100 лучших ресторанов мира согласно рейтингу The World Best Restaurants,
+                        “Selfie Astana” также является рестораном класса fine dining. Кухней управляет известный
+                        московский бренд-шеф Анатолий Казаков, который представляет новый авторский взгляд на
+                        европейскую гастрономию и традиционную казахскую кухню. Позиции с локальным колоритом в
+                        его прочтении создаются по канонам высокой кухни: бешбармак здесь подают с тончайшими
+                        полосками яичной лапши, соусом на основе конского бульона и масла из джусая, а баурсаки
+                        запекают и наполняют гуакамоле из авокадо.
+                    </p>
                 </div>
                 <div class="block_action text_font">
                     <a href="#" class="text_black">
@@ -240,23 +246,25 @@
                     Starbucks Reserve Bar
                 </div>
                 <div class="block_text text_font text-white">
-                    EMPORIUM, 1 этаж
-                    <br>
-                    <br>
-                    Это первое заведение в Казахстане с концепцией кофейного бара, в рамках которой
-                    бариста имеет возможность общаться с гостями, демонстрируя альтернативные методы
-                    заваривания кофе (пуровер, сифон, кемекс и другие), направленные на то, чтобы максимально
-                    раскрыть вкус зерна. Напитки здесь готовятся с помощью кофе-машины Clover и эспрессо-машины
-                    Black Eagle. Для приготовления напитков на Black Eagle используется единственная в своем
-                    роде смесь сортов зерен Reserve Microblend. В интерьере Starbucks Reserve Bar с помощью
-                    текстур и узоров отражен колорит казахской культуры,
-                    а посредством арт-объектов ручной работы — история и регионы произрастания кофейных зерен.
-                    Это место создано для того, чтобы открывать для себя всю прелесть кофе линейки Reserve.
-                    <br>
-                    <br>
-                    Контакты: +7 (7172) 73‒88‒05<br>
-                    http://www.starbucks.com.kz/<br>
-                    Instagram: https://www.instagram.com/starbuckskz/
+                    <p>
+                        EMPORIUM, 1 этаж
+                    </p>
+                    <p>
+                        Это первое заведение в Казахстане с концепцией кофейного бара, в рамках которой
+                        бариста имеет возможность общаться с гостями, демонстрируя альтернативные методы
+                        заваривания кофе (пуровер, сифон, кемекс и другие), направленные на то, чтобы максимально
+                        раскрыть вкус зерна. Напитки здесь готовятся с помощью кофе-машины Clover и эспрессо-машины
+                        Black Eagle. Для приготовления напитков на Black Eagle используется единственная в своем
+                        роде смесь сортов зерен Reserve Microblend. В интерьере Starbucks Reserve Bar с помощью
+                        текстур и узоров отражен колорит казахской культуры,
+                        а посредством арт-объектов ручной работы — история и регионы произрастания кофейных зерен.
+                        Это место создано для того, чтобы открывать для себя всю прелесть кофе линейки Reserve.
+                    </p>
+                    <p>
+                        Контакты: +7 (7172) 73‒88‒05<br>
+                        http://www.starbucks.com.kz/<br>
+                        Instagram: https://www.instagram.com/starbuckskz/
+                    </p>
                 </div>
             </div>
             <div class="col-lg-6 order-lg-first">
@@ -269,18 +277,18 @@
     <div class="container">
         <div class="row">
             <div class="text-center w-100">
-                <a href="#">
+                <a href="https://www.facebook.com/talantowers/" target="_blank">
                     <img src="img/main/footer-facebook.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://ru.linkedin.com/showcase/talan-towers" target="_blank">
                     <img src="img/main/footer-linkedin.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://instagram.com/talantowers?utm_source=ig_profile_share&igshid=1i683dwvbnp2u" target="_blank">
                     <img src="img/main/footer-instagram.png" alt="">
                 </a>
             </div>
             <div class="text-center w-100 mt-4">
-                <a href="#" class="text_font text_gold">
+                <a href="contacts.html" class="text_font text_gold">
                     Контакты
                 </a>
             </div>
