--- a/contacts.html
+++ b/contacts.html
@@ -127,20 +127,22 @@
                     Контакты:
                 </h1>
                 <div class="block_text text_font text-white">
-                    Адрес<br>
-                    Республика Казахстан, Астана, 010016, Есильский район, ул.Достык, 16<br>
-                    Тел.: +7 (7172) 73 60 06<br>
-                    E-mail: info@astanapm.com
-                    <br>
-                    <br>
-                    Отдел аренды Talan Towers Offices<br>
-                    Тел.: +7 (7172) 73 50 46 <br>
-                    E-mail: sales@astanapm.com
-                    <br>
-                    <br>
-                    Отдел маркетинга<br>
-                    Тел.: +7 (7172) 73 50 60 (118)<br>
-                    E-mail: marketing@astanapm.com
+                    <p>
+                        Адрес<br>
+                        Республика Казахстан, Астана, 010016, Есильский район, ул.Достык, 16<br>
+                        Тел.: +7 (7172) 73 60 06<br>
+                        E-mail: info@astanapm.com
+                    </p>
+                    <p>
+                        Отдел аренды Talan Towers Offices<br>
+                        Тел.: +7 (7172) 73 50 46 <br>
+                        E-mail: sales@astanapm.com
+                    </p>
+                    <p>
+                        Отдел маркетинга<br>
+                        Тел.: +7 (7172) 73 50 60 (118)<br>
+                        E-mail: marketing@astanapm.com
+                    </p>
                 </div>
             </div>
             <div class="col-lg-5">
@@ -186,18 +188,18 @@
     <div class="container">
         <div class="row">
             <div class="text-center w-100">
-                <a href="#">
+                <a href="https://www.facebook.com/talantowers/" target="_blank">
                     <img src="img/main/footer-facebook.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://ru.linkedin.com/showcase/talan-towers" target="_blank">
                     <img src="img/main/footer-linkedin.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://instagram.com/talantowers?utm_source=ig_profile_share&igshid=1i683dwvbnp2u" target="_blank">
                     <img src="img/main/footer-instagram.png" alt="">
                 </a>
             </div>
             <div class="text-center w-100 mt-4">
-                <a href="#" class="text_font text_gold">
+                <a href="contacts.html" class="text_font text_gold">
                     Контакты
                 </a>
             </div>
