--- a/rcr.html
+++ b/rcr.html
@@ -169,18 +169,18 @@
     <div class="container">
         <div class="row">
             <div class="text-center w-100">
-                <a href="#">
+                <a href="https://www.facebook.com/talantowers/" target="_blank">
                     <img src="img/main/footer-facebook.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://ru.linkedin.com/showcase/talan-towers" target="_blank">
                     <img src="img/main/footer-linkedin.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://instagram.com/talantowers?utm_source=ig_profile_share&igshid=1i683dwvbnp2u" target="_blank">
                     <img src="img/main/footer-instagram.png" alt="">
                 </a>
             </div>
             <div class="text-center w-100 mt-4">
-                <a href="#" class="text_font text_gold">
+                <a href="contacts.html" class="text_font text_gold">
                     Контакты
                 </a>
             </div>
